--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "msa-2018",
+  "name": "utrack-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.6.0",
-    "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.6.0",
-    "react-responsive-modal": "^3.5.0",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "react-scripts-ts": "3.1.0"
   },
   "scripts": {
@@ -16,10 +14,12 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.8",
-    "@types/node": "^10.12.0",
-    "@types/react": "^16.4.18",
+    "@types/jest": "^23.3.9",
+    "@types/node": "^10.12.9",
+    "@types/react": "^16.7.6",
     "@types/react-dom": "^16.0.9",
-    "typescript": "^3.1.3"
+    "enzyme": "^3.7.0",
+    "react-addons-test-utils": "^15.6.2",
+    "typescript": "^3.1.6"
   }
 }
