--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/react-bootstrap": "^0.32.14",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^4.3.1",
+    "and": "0.0.3",
+    "build": "^0.1.4",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-pdf": "^3.0.5",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0"
