--- a/package.json
+++ b/package.json
@@ -8,14 +8,24 @@
     "@material-ui/styles": "^3.0.0-alpha.0",
     "@types/classnames": "^2.2.6",
     "@types/react-bootstrap": "^0.32.14",
+    "@types/react-facebook-login": "^3.6.5",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-webcam": "^0.3.1",
+    "and": "0.0.3",
+    "build": "^0.1.4",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
+    "react-facebook-login": "^4.1.1",
+    "react-pdf": "^3.0.5",
+    "react-responsive-modal": "^3.5.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "react-simple-chatbot": "^0.4.2",
+    "react-webcam": "^1.0.4",
+    "styled-components": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
