--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "^0.1.4",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
+    "react-chat-widget": "^2.1.4-1",
     "react-dom": "^16.6.3",
     "react-facebook-login": "^4.1.1",
     "react-pdf": "^3.0.5",
